# Execu_Chat

./: .gitignore  README.md  settings.gradle.kts  unnamed.patch
app/: build.gradle.kts
app/src/androidTest/java/com/example/execu_chat/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/java/com/example/execu_chat/: AsrEngine.kt  AssetMover.kt  BackendType.kt  ChatAdapter.kt  ChatFormatter.kt  ChatMessage.kt  ChatSession.kt  ChatStore.kt  CloudMainActivity.kt  DpResearcchClient.kt  GatewayClient.kt  Image.kt  LocalMainActivity.kt  LoginActivity.kt  MainActivity.kt  MelSpectogram.kt  MessageAdapter.kt  ModelConfig.kt  ModelType.kt  SearchClient.kt  TokenManager.kt  VllmClient.kt  WelcomeActivity.kt  WhisperSpec.kt  cloudViewModel.kt  viewModel.kt
app/src/main/java/com/example/execu_chat/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: baseline_send_24.xml  bg_message_assistant.xml  bg_message_user.xml  bg_tool_chip.xml  outline_block_24.xml
app/src/main/res/layout/: cloud_menu.xml  item_message.xml  item_thread.xml  login_menu.xml  main_menu.xml  welcome_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/execu_chat/: ExampleUnitTest.kt
docs/: offline.md  online.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
